[package]
name = "androidy-log"
version = "1.0.3"
authors = ["Douman <douman@gmx.se>"]
keywords = ["log", "android"]
description = "Minimal wrapper over android logging"
readme = "README.md"
repository = "https://github.com/DoumanAsh/androidy-log"
license = "BSL-1.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[features]
std = []
